[gd_scene load_steps=10 format=2]

[ext_resource path="res://Components/Ball/BallInfo.gd" type="Script" id=1]
[ext_resource path="res://Assets/Balls.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Silkscreen-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Components/Ball/Ball.gd" type="Script" id=4]
[ext_resource path="res://Sounds/ball_rolling.mp3" type="AudioStream" id=5]
[ext_resource path="res://Sounds/pipe_out.mp3" type="AudioStream" id=6]

[sub_resource type="PhysicsMaterial" id=3]

[sub_resource type="DynamicFont" id=1]
extra_spacing_char = -2
font_data = ExtResource( 3 )

[sub_resource type="CircleShape2D" id=2]
radius = 25.0

[node name="Ball" type="RigidBody2D"]
light_mask = 4
position = Vector2( 64, 24 )
collision_layer = 5
mass = 3.0
physics_material_override = SubResource( 3 )
contacts_reported = 1
contact_monitor = true
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="BallInfo" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="BallSprite" type="Sprite" parent="BallInfo"]
scale = Vector2( 1.2, 1.2 )
z_index = 1
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 198, 332, 42, 43 )

[node name="BallNumber" type="Label" parent="BallInfo/BallSprite"]
margin_left = -10.6674
margin_top = -11.7118
margin_right = 13.3326
margin_bottom = 9.28821
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "12"
align = 1
valign = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="BallRoll" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 7.428
pitch_scale = 0.48

[node name="BallSpawned" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="child_exiting_tree" from="." to="." method="_on_Ball_child_exiting_tree"]
